<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LunchActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="32dp"
        android:text="@string/Pea_soup"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="76dp"
        android:text="@string/Ingredients"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="361dp"
        android:layout_height="136dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Peas" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Beef" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Carrot" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Onion" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Salt2" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Water" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="21dp"
        android:text="@string/Stages"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="358dp"
        android:layout_height="193dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="9dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Stages_Lunch1" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Stages_Lunch2" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Stages_Lunch3" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="261dp"
        android:layout_height="164dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        app:srcCompat="@drawable/sup" />
</androidx.constraintlayout.widget.ConstraintLayout>