<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SupperActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="64dp"
        android:text="@string/Ingredients"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Chicken"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="350dp"
        android:layout_height="127dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Potato"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Fillet"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Onion3"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Salt3"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pepper"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Oil"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="9dp"
        android:text="@string/Stages"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="358dp"
        android:layout_height="244dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="9dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35">

        <TextView
            android:id="@+id/textView36"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/Stages_Supper1" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/Stages_Supper2" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/Stages_Supper3" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/Stages_Supper4" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="244dp"
        android:layout_height="159dp"
        android:layout_marginStart="83dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        app:srcCompat="@drawable/kartoshka" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="6dp"
        android:text="@string/fillets"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/button9"
        android:layout_width="137dp"
        android:layout_height="61dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="36dp"
        android:text="Start"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="8dp"
        android:text="08:00"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView42" />
</androidx.constraintlayout.widget.ConstraintLayout>